crates/churl/tests/snapshots/tui_snapshot__response_pane_with_json_body.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│                            │┌ Request ───────────────────────────────────────┐
│                            ││                                                │
│                            ││no endpoint selected                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            │└────────────────────────────────────────────────┘
│                            │┏ Respons 200 OK · 142 ms · 30 B · 1 header  [h] ┓
│                            │┃1 {                                             ┃
│                            │┃2   "id": 1,                                    ┃
│                            │┃3   "name": "Ada"                               ┃
│                            │┃4 }                                             ┃
│                            │┃                                                ┃
└────────────────────────────┘┃                                                ┃
┌ Sequences ─────────────────┐┃                                                ┃
│<leader>s n to add          │┃                                                ┃
└────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 RESPONSE · demo · ? help · space leader · / search · : palette
