crates/churl/tests/snapshots/tui_snapshot__response_wrap_toggle.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 382
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│                            │┌ Request ───────────────────────────────────────┐
│                            ││                                                │
│                            ││no endpoint selected                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            │└────────────────────────────────────────────────┘
│                            │┏ 200 OK · 142 ms · 171 B · 1 header  [h] · wrap ┓
│                            │┃1 {                                             ┃
│                            │┃2   "data": "wrap-me-wrap-me-wrap-me-wrap-me-wra┃
│                            │┃  p-me-wrap-me-wrap-me-wrap-me-wrap-me-wrap-me-w┃
│                            │┃  rap-me-wrap-me-wrap-me-wrap-me-wrap-me-wrap-me┃
│                            │┃  -wrap-me-wrap-me-wrap-me-wrap-me-"            ┃
└────────────────────────────┘┃3 }                                             ┃
┌ Sequences ─────────────────┐┃                                                ┃
│<leader>s n to add          │┃                                                ┃
└────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 RESPONSE · demo · ? help · space leader · / search · : palette
