crates/churl/tests/snapshots/tui_snapshot__search_overlay_with_query.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ────────────┐┌ Request ─────────────────┐┌ Response ────────────────┐
│> ▸ orders            ││                          ││no response yet           │
│  ▸ users             ││no endpoint selected      ││                          │
│                      ││                          ││no endpoint selected      │
│                      ││                          ││                          │
│              ┏ Search endpoints ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓              │
│              ┃> user█                                         ┃              │
│              ┃> users/List users                              ┃              │
│              ┃  users/Create user                             ┃              │
│              ┃  users/Get user                                ┃              │
│              ┃                                                ┃              │
│              ┃                                                ┃              │
│              ┃                                                ┃              │
│              ┃                                                ┃              │
│              ┃                                                ┃              │
│              ┃                                                ┃              │
│              ┃                                                ┃              │
│              ┃                                                ┃              │
│              ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛              │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
└──────────────────────┘└──────────────────────────┘└──────────────────────────┘
 EXPLORER · demo · j/k move · enter select · ctrl-s send · / search · : palette
