crates/churl/tests/snapshots/tui_snapshot__sequence_runner_finished_with_failure.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: render_runner(&mut state)
---
                                                                                          
     ┏ Sequence · Auth flow ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓    
     ┃Mode: RUN   2/3 · 1 failed · 1 skipped · 135ms total · done   on_error: halt   ┃    
     ┃Run the chain in order, piping each step's extracted values into the requests t┃    
     ┃┏ Steps ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Response ─────────────────────────────┐┃    
     ┃┃✓ POST auth/login.toml  200  90ms   ┃│request failed                         │┃    
     ┃┃✗ GET users/me.toml  500  45ms      ┃│users/me.toml                          │┃    
     ┃┃– GET users/by_id.toml  skipped     ┃│                                       │┃    
     ┃┃                                    ┃│error:                                 │┃    
     ┃┃                                    ┃│HTTP 500                               │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│no response — status, body, and timing │┃    
     ┃┃                                    ┃│are unavailable                        │┃    
     ┃┃                                    ┃│press y to copy the error              │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└───────────────────────────────────────┘┃    
     ┃j/k step · tab response · r re-run · ^R edit · ctrl-c cancel · q close         ┃    
     ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
