crates/churl/tests/snapshots/tui_snapshot__sequence_runner_midrun.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: render_runner(&mut state)
---
                                                                                          
     ┏ Sequence · Auth flow ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓    
     ┃1/3 · 120ms total   on_error: halt                                             ┃    
     ┃┏ Steps ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌200 OK · 120 ms · 27 B · 1 header  [h] ┐┃    
     ┃┃✓ POST auth/login.toml  200  120ms  ┃│{"data":{"token":"abc123"}}            │┃    
     ┃┃    ↳ token = ••••••                ┃│                                       │┃    
     ┃┃⠋ GET users/me.toml                 ┃│                                       │┃    
     ┃┃○ GET users/by_id.toml              ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┃                                    ┃│                                       │┃    
     ┃┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└───────────────────────────────────────┘┃    
     ┃j/k step · tab response · r re-run · ctrl-c cancel · q close                   ┃    
     ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
