crates/churl/tests/snapshots/tui_snapshot__sequences_subpane_on_endpoints_focused.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 693
expression: snapshot(&mut app)
---
┏ Explorer ━━━━━━━━━━━━━━━━━━┓┌ URL ───────────────────────────────────────────┐
┃> ▸ orders                  ┃│no endpoint selected                            │
┃  ▸ users                   ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Request ───────────────────────────────────────┐
┃                            ┃│                                                │
┃                            ┃│no endpoint selected                            │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Response ──────────────────────────────────────┐
┃                            ┃│no response yet                                 │
┃                            ┃│                                                │
┃                            ┃│no endpoint selected                            │
┃                            ┃│                                                │
┃                            ┃│                                                │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│                                                │
┌ Sequences ─────────────────┐│                                                │
│2 sequences                 ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
