crates/churl/tests/snapshots/tui_snapshot__settings_panel_advanced_section_when_debug_on.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snap
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│           ┏ Settings · Debug ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓───────────┐
│           ┃    Debug capture     on                              ┃           │
│           ┃    Advanced (debug)  ↳ concurrency/total/body-cap/tim┃           │
│           ┃┌ Advanced limits (debug-gated) ─────────────────────┐┃           │
│           ┃│▸   concurrency       5                             │┃           │
│           ┃│    total             10                            │┃           │
│           ┃│    body cap          10 MB                         │┃           │
│           ┃│    timeout (s)       30                            │┃           │
│           ┃│                                                    │┃───────────┘
│           ┃│                                                    │┃───────────┐
│           ┃└────────────────────────────────────────────────────┘┃           │
│           ┃                                                      ┃           │
│           ┃                                                      ┃           │
│           ┃                                                      ┃           │
│           ┃Default concurrent requests for a new load run.       ┃           │
└───────────┗━━━ j/k · J/K adjust · enter edit · s save · esc back ┛           │
┌ Sequences ─────────────────┐│                                                │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 debug capture ON — sends now build an inspectable trace                        
 EXPLORER · demo · DEBUG · ? help · space leader · / search · : palette
