crates/churl/tests/snapshots/tui_snapshot__settings_panel_network_category.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│           ┏ Settings · Network ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓───────────┐
│           ┃▸   Proxy             (none — uses HTTP(S)_PROXY env) ┃           │
│           ┃    TLS verification  on                              ┃           │
│           ┃    Cookies           off                             ┃           │
│           ┃┌ Cookies ───────────────────────────────────────────┐┃           │
│           ┃│(cookie jar is off — enable it above, or a to add on│┃           │
│           ┃│                                                    │┃           │
│           ┃│                                                    │┃           │
│           ┃│                                                    │┃           │
│           ┃│                                                    │┃───────────┘
│           ┃│                                                    │┃───────────┐
│           ┃└────────────────────────────────────────────────────┘┃           │
│           ┃                                                      ┃           │
│           ┃                                                      ┃           │
│           ┃HTTP(S) proxy for every request this session. Empty   ┃           │
│           ┃uses the HTTP(S)_PROXY env var.                       ┃           │
└───────────┗━━ j/k · J/K adjust · enter · a add · l list · s save ┛           │
┌ Sequences ─────────────────┐│                                                │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
